# xmp-reader

./: .gitattributes  .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  xmp-sidecar.propdesc
.github/workflows/: release.yml
docs/: code-signing.md  dev-environment.md  plan.md  tasks.md  test-checklist.md
sandbox/: install.ps1  smoke-test.wsb
sandbox/test-fixtures/: README.md
scripts/: install.ps1  reset-handler.ps1  sign-dll.ps1  uninstall.ps1
src/: context_menu.rs  embedded.rs  handler.rs  lib.rs  pkeys.rs  registry.rs  sidecar.rs
