[package]
name = "xmp-reader"
version = "0.1.0"
edition = "2021"

[lib]
name = "xmp_reader"
crate-type = ["cdylib"]

[dependencies]
windows-core = "0.58"
xmp_toolkit = { version = "1", features = ["crt_static"] }

[dev-dependencies]
tempfile = "3"

[dependencies.windows]
version = "0.58"
features = [
    "implement",
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_System_Com",
    "Win32_System_Com_StructuredStorage",
    "Win32_System_LibraryLoader",
    "Win32_System_Ole",
    "Win32_System_SystemServices",
    "Win32_Security",
    "Win32_System_Registry",
    "Win32_UI_Shell",
    "Win32_UI_Shell_Common",
    "Win32_UI_Shell_PropertiesSystem",
    "Win32_UI_WindowsAndMessaging",
]
